# electricui-embedded-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: host.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: packet_from_bytes.rs
res/: protocol.puml
src/: decoder.rs  error.rs  lib.rs  message.rs  prelude.rs  sealed.rs
src/wire/: framing.rs  mod.rs  packet.rs  types.rs
